# pb11_ex_skb

./: CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: conda.yml  wheels.yml
src/: main.cpp
src/scikit_build_example/: __init__.py  pymain.py
